tests/ui/cached_key_without_convert.stderr
error: `key` requires `convert` to be set
 --> tests/ui/cached_key_without_convert.rs:3:1
  |
3 | #[cached(key = "String")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cached` (in Nightly builds, run with -Z macro-backtrace for more info)
